--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "description": "",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^22.10.2",
     "prisma": "^6.0.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.1",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/jwt": "^9.0.1",
     "@prisma/client": "^6.0.1",
     "bcryptjs": "^2.4.3",
     "fastify": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.1"
   }
 }
