--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/jwt": "^9.0.1",
     "@prisma/client": "^6.0.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
     "zod": "^3.24.1"
   }
