--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-animal-health",
+  "name": "backend-pets-health",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
